# libib-client

./: .flake8  .gitignore  404.html  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
Accounts/: index.html
Managers/: index.html
Patrons/: index.html
docs/: Accounts.md  Managers.md  Patrons.md  index.md
search/: search_index.json
src/libib-client/: __init__.py  main.py
src/libib_client/: __init__.py  main.py
